--- a/mas-bags/src/App.css
+++ b/mas-bags/src/App.css
@@ -47,20 +47,14 @@ svg {
 }
 .main-layout {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1000px 900px 1fr;
   grid-template-rows: auto;
-  margin-left: 100px;
 }
 .data-summary {
-  grid-area: 1/3;
   list-style: none;
 }
 .data-form {
-  grid-area: 2/2;
   padding-top: 30px;
-}
-.cartlag-doll {
-  grid-area: 1/2;
 }
 .name-input {
   display: flex;
@@ -69,14 +63,6 @@ svg {
 input {
   height: 25px;
   margin-right: 10px;
-}
-.selected-part {
-  font-size: 2rem;
-}
-
-.selected-form {
-  display: flex;
-  align-items: center;
 }
 
 .links {
@@ -87,12 +73,6 @@ input {
   cursor: pointer;
 }
 
-/* #Layer_2 {
-  pointer-events: none;
-}
-#Layer_1-2 {
-  pointer-events: none;
-} */
 #someome {
   pointer-events: none;
 }
@@ -111,23 +91,33 @@ input {
   pointer-events: all;
 }
 .highlight {
-  filter: drop-shadow(0px 0px 10px rgba(253, 253, 253, 0.589));
+  filter: drop-shadow(0px 0px 5px rgba(253, 253, 253, 0.589));
   stroke: rgb(255, 255, 255);
   stroke-width: 2px;
 
   transition: all 0.3s ease-in-out;
 }
 .instruction {
-  margin-top: 100px;
   margin-left: 300px;
+  grid-area: 1/1;
+  font-size: 2rem;
+  font-weight: bold;
+}
+.instruction-2 {
+  margin-left: 300px;
+  margin-top: 100px;
+  grid-area: 1/1;
+  font-size: 1.5rem;
 }
 .save-button {
-  margin-left: 30px;
+  margin-left: 10px;
+  font-size: 1rem;
+  width: 80px;
 }
 h1 {
-  margin-left: 400px;
-  padding-bottom: 100px;
-  font-size: 2rem;
+  font-size: 2.5rem;
+  padding: 0;
+  margin: 0;
 }
 .main-image {
   margin-top: 100px;
@@ -144,17 +134,37 @@ select {
   border-radius: 10px;
 }
 button {
-  background: none;
-  border: 1px solid #bc5e5e;
-  font-size: 1.5rem;
-  padding: 5px;
-  border-radius: 10px;
+  padding: 0px 10px;
+  border: none;
+  border-radius: 12px;
+  height: 40px;
+  font-size: 1.2rem;
+
+  background: linear-gradient(135deg, #c54a4a, #a71d1d); /* Gradient Magic */
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  border: 1px solid rgb(148, 131, 131);
+  letter-spacing: 2px;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
   cursor: pointer;
+  transition: all 0.3s ease;
+  outline: none;
+}
+button:hover {
+  transform: scale(1.1);
+  background: linear-gradient(135deg, #c73939, #a81111);
+  box-shadow: 0 12px 20px rgba(0, 0, 0, 0.4);
+  letter-spacing: 3px;
+}
+button:active {
+  transform: scale(0.97);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.5);
 }
 .list-data {
-  font-size: 2rem;
+  font-size: 1rem;
+  font-weight: bold;
 }
-button:hover,
+
 select:hover,
 input:hover {
   border: 1px solid #79bc5e;
@@ -183,4 +193,198 @@ h4 {
 }
 .value-input {
   width: 150px;
+  font-size: 1rem;
+  padding-left: 5px;
+  font-weight: bold;
+}
+
+.name-container {
+  font-size: 1.5rem;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  margin-left: 100px;
+  height: 90px;
+  margin-top: 0px;
+  align-items: center;
+}
+
+.cls-1 {
+  fill: #d49769;
+}
+
+.cls-2 {
+  fill: #c29477;
+}
+
+.cls-3 {
+  fill: #fff;
+}
+.cls-1:hover {
+  cursor: pointer;
+}
+
+.cls-2:hover {
+  cursor: pointer;
+}
+
+.cls-3:hover {
+  cursor: pointer;
+}
+.edit-name {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.popup {
+  position: fixed;
+  bottom: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #22c55e;
+  color: white;
+  padding: 10px;
+  border-radius: 10px;
+  animation: fadeout 3s forwards;
+}
+
+@keyframes fadeout {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+small {
+  margin-left: 20px;
+  font-size: 1.2rem;
+}
+.new-category {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 70px 1fr 1fr;
+}
+
+.card-layout {
+  grid-area: 1/2;
+}
+.doll-summary {
+  display: grid;
+  grid-template-columns: 500px 500px;
+  margin: 0;
+  padding: 0;
+}
+.cartlag-doll {
+  margin: 0;
+  padding: 0;
+}
+.download-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 100px;
+  width: 100%;
+}
+.new-category-form {
+  display: flex;
+  flex-direction: column;
+}
+.new-category-button {
+  width: 80px;
+  margin-top: 20px;
+  font-size: 1rem;
+}
+
+h5 {
+  margin: 0;
+  padding: 0;
+}
+.new-category-name {
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+.navbar {
+  display: flex;
+  justify-content: start;
+  margin-left: 280px;
+}
+.selected-input {
+  margin-right: 20px;
+}
+h6 {
+  margin: 0;
+  padding: 0;
+  color: #bc5e5e;
+}
+select {
+  font-size: 1rem;
+  width: 90px;
+}
+.new-name {
+  font-size: 1.6rem;
+}
+.hello-name {
+  margin-right: 20px;
+}
+/* button:hover {
+  transform: scale(1.2) perspective(1px);
+}
+button {
+  transition: all 0.5s ease;
+  transform: scale(1);
+} */
+.show-selected {
+  max-width: 1px;
+}
+.selection {
+  display: flex;
+  align-items: baseline;
+  justify-content: flex-start;
+}
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 120%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  border-radius: 10px;
+  position: relative;
+  max-width: 500px;
+  width: 90%;
+}
+
+.modal-image {
+  max-width: 100%;
+  height: auto;
+}
+.color-input {
+  margin-left: 20px;
+  height: 45px;
+  width: 45px;
+}
+.new-category-select {
+  margin-top: 10px;
+}
+.color-input:hover {
+  transform: scale(1.2) perspective(1px);
+}
+.color-input:active {
+  transform: scale(0.97);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.5);
+}
+.color-input {
+  transition: all 0.5s ease;
+  transform: scale(1);
+}
+.reset-button {
+  margin-left: 20px;
 }
