--- a/mas-bags/src/App.css
+++ b/mas-bags/src/App.css
@@ -52,7 +52,17 @@ svg {
 }
 .data-summary {
   list-style: none;
+  width: 180px;
+  height: fit-content;
+  border: 1px solid #bc5e5e;
+  padding-bottom: 20px;
 }
+.summary-parts {
+  font-size: 1.2rem;
+  margin-right: 5px;
+  color: #bc5e5e;
+}
+
 .data-form {
   padding-top: 30px;
 }
@@ -98,10 +108,18 @@ input {
   transition: all 0.3s ease-in-out;
 }
 .instruction {
-  margin-left: 300px;
+  margin-left: 250px;
   grid-area: 1/1;
   font-size: 2rem;
   font-weight: bold;
+  border: 1px solid #bc5e5e;
+  border-radius: 10px;
+  padding-left: 40px;
+  width: 550px;
+  height: 650px;
+}
+.instruction:hover {
+  border: 1px solid #555555;
 }
 .instruction-2 {
   margin-left: 300px;
@@ -113,6 +131,10 @@ input {
   margin-left: 10px;
   font-size: 1rem;
   width: 80px;
+}
+.select-body-header {
+  padding-top: 20px;
+  margin-left: 35px;
 }
 h1 {
   font-size: 2.5rem;
@@ -136,11 +158,11 @@ select {
 button {
   padding: 0px 10px;
   border: none;
-  border-radius: 12px;
+  border-radius: 10px;
   height: 40px;
   font-size: 1.2rem;
 
-  background: linear-gradient(135deg, #c54a4a, #a71d1d); /* Gradient Magic */
+  background: linear-gradient(135deg, #c54a4a, #a71d1d);
   color: rgb(255, 255, 255);
   font-weight: bold;
   border: 1px solid rgb(148, 131, 131);
@@ -163,11 +185,16 @@ button:active {
 .list-data {
   font-size: 1rem;
   font-weight: bold;
+  margin-bottom: 10px;
+}
+.summary-parts:hover {
+  cursor: pointer;
+  color: #79bc5e;
 }
 
 select:hover,
 input:hover {
-  border: 1px solid #79bc5e;
+  border: 1px solid;
 }
 .slogan-text {
   text-align: center;
@@ -236,6 +263,10 @@ h4 {
   justify-content: center;
   align-items: center;
 }
+.list-items {
+  width: fit-content;
+}
+
 .popup {
   position: fixed;
   bottom: 50px;
@@ -260,18 +291,15 @@ small {
   margin-left: 20px;
   font-size: 1.2rem;
 }
-.new-category {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 70px 1fr 1fr;
-}
 
 .card-layout {
   grid-area: 1/2;
+  width: 750px;
 }
 .doll-summary {
   display: grid;
-  grid-template-columns: 500px 500px;
+  grid-template-columns: 500px 200px;
+  width: 700px;
   margin: 0;
   padding: 0;
 }
@@ -286,14 +314,24 @@ small {
   margin-left: 100px;
   width: 100%;
 }
+.new-category-section {
+  margin-top: 250px;
+  margin-left: 40px;
+}
 .new-category-form {
-  display: flex;
-  flex-direction: column;
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: 200px 200px 160px;
+  grid-template-rows: 1fr 1fr 50px;
+  align-items: center;
+  gap: 0px;
 }
 .new-category-button {
   width: 80px;
-  margin-top: 20px;
+  margin-top: 50px;
+  margin-left: 170px;
   font-size: 1rem;
+  grid-area: 3/2;
 }
 
 h5 {
@@ -301,8 +339,32 @@ h5 {
   padding: 0;
 }
 .new-category-name {
+  grid-area: 1/1;
   font-size: 1.3rem;
   font-weight: bold;
+}
+.new-category-value {
+  grid-area: 1/2;
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+.name-input {
+  grid-area: 2/1;
+  width: 150px;
+  font-size: 1rem;
+  padding-left: 5px;
+  font-weight: bold;
+}
+.value-wrapper {
+  grid-area: 2/2;
+  display: flex;
+  align-items: center;
+}
+.new-value-input {
+  width: 150px;
+}
+.new-category-select {
+  grid-area: 1/3;
 }
 .navbar {
   display: flex;
@@ -346,9 +408,9 @@ button {
   position: fixed;
   top: 0;
   left: 0;
-  width: 120%;
+  width: 90%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6);
+  background: none;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -371,9 +433,7 @@ button {
   height: 45px;
   width: 45px;
 }
-.new-category-select {
-  margin-top: 10px;
-}
+
 .color-input:hover {
   transform: scale(1.2) perspective(1px);
 }
