--- a/mas-bags/src/App.css
+++ b/mas-bags/src/App.css
@@ -4,6 +4,12 @@
 .dropdown {
   position: relative;
 }
+.error-message {
+  font-size: 0.7rem;
+  margin: 0px;
+  padding: 0;
+  color: #22c55e;
+}
 
 .menu {
   position: absolute;
@@ -52,10 +58,12 @@ svg {
 }
 .data-summary {
   list-style: none;
-  width: 180px;
+  width: 320px;
   height: fit-content;
   border: 1px solid #bc5e5e;
   padding-bottom: 20px;
+  padding-right: 40px;
+  border-radius: 10px;
 }
 .summary-parts {
   font-size: 1.2rem;
@@ -115,7 +123,8 @@ input {
   border: 1px solid #bc5e5e;
   border-radius: 10px;
   padding-left: 40px;
-  width: 550px;
+  padding-right: 40px;
+  width: 600px;
   height: 650px;
 }
 .instruction:hover {
@@ -262,9 +271,15 @@ h4 {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 20px;
 }
 .list-items {
-  width: fit-content;
+  /* display: flex;
+  align-items: baseline; */
+  display: grid;
+  grid-template-columns: 120px 1fr 1fr;
+  align-items: baseline;
+  gap: 0px;
 }
 
 .popup {
@@ -277,6 +292,12 @@ h4 {
   padding: 10px;
   border-radius: 10px;
   animation: fadeout 3s forwards;
+}
+.change-name-container {
+  border: 1px solid rgb(255, 119, 119);
+  background-color: white;
+  border-radius: 10px;
+  padding: 10px;
 }
 
 @keyframes fadeout {
@@ -369,6 +390,7 @@ h5 {
 .navbar {
   display: flex;
   justify-content: start;
+  align-items: baseline;
   margin-left: 280px;
 }
 .selected-input {
@@ -385,17 +407,19 @@ select {
 }
 .new-name {
   font-size: 1.6rem;
+  color: #bc5e5e;
+  font-weight: bold;
 }
 .hello-name {
   margin-right: 20px;
 }
-/* button:hover {
-  transform: scale(1.2) perspective(1px);
+.verification-delete {
+  background-color: #ffffff;
+  border-radius: 10px;
+  padding: 10px;
+  color: #bc5e5e;
 }
-button {
-  transition: all 0.5s ease;
-  transform: scale(1);
-} */
+
 .show-selected {
   max-width: 1px;
 }
@@ -423,6 +447,29 @@ button {
   max-width: 500px;
   width: 90%;
 }
+.brand-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: green;
+  width: 100%;
+  height: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  z-index: 1000;
+}
+
+.brand-modal-content {
+  border-radius: 10px;
+  position: relative;
+  max-width: 500px;
+  width: 90%;
+}
+.brand-list-modal {
+  list-style: none;
+}
 
 .modal-image {
   max-width: 100%;
@@ -447,4 +494,501 @@ button {
 }
 .reset-button {
   margin-left: 20px;
+}
+.delete-symbol {
+  margin-left: 20px;
+  font-size: 1rem;
+}
+.import-json {
+  width: 270px;
+  font-size: 1rem;
+  border: none;
+}
+.import-profile-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+  padding: 0px 10px;
+  border: none;
+  border-radius: 10px;
+  height: 40px;
+  font-size: 1.2rem;
+  max-width: 250px;
+  background: linear-gradient(135deg, #c54a4a, #a71d1d);
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  border: 1px solid rgb(148, 131, 131);
+  letter-spacing: 2px;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  transition: all 0.3s ease;
+  outline: none;
+  margin-bottom: 20px;
+}
+.import-profile-container:hover {
+  transform: scale(1.1);
+  background: linear-gradient(135deg, #c73939, #a81111);
+  box-shadow: 0 12px 20px rgba(0, 0, 0, 0.4);
+  letter-spacing: 3px;
+}
+.import-profile-text {
+  text-align: center;
+  font-weight: bold;
+}
+.find-brand {
+  width: 120px;
+  margin-left: 10px;
+
+  text-align: center;
+  border: none;
+  border-radius: 10px;
+  height: 20px;
+  font-size: 0.7rem;
+
+  background: linear-gradient(135deg, #c54a4a, #a71d1d);
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  border: 1px solid rgb(148, 131, 131);
+  letter-spacing: 2px;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  transition: all 0.3s ease;
+  outline: none;
+}
+@media (max-width: 400px) {
+  #root {
+    margin: 0 auto;
+  }
+  .dropdown {
+    position: relative;
+  }
+  .error-message {
+    font-size: 0.7rem;
+    margin: 0px;
+    padding: 0;
+    color: #22c55e;
+  }
+
+  .main-layout {
+    display: grid;
+    grid-template-columns: 200px 200px 150px;
+    grid-template-rows: auto;
+  }
+  .summary-text {
+    font-size: 1rem;
+  }
+  .data-summary {
+    list-style: none;
+    width: 150px;
+    height: fit-content;
+    border: 1px solid #bc5e5e;
+    padding-left: 30px;
+    margin-left: 20px;
+  }
+  .summary-parts {
+    font-size: 1rem;
+    margin-right: 5px;
+    color: #bc5e5e;
+  }
+
+  .data-form {
+    padding-top: 0px;
+  }
+  .name-input {
+    display: flex;
+    align-items: center;
+  }
+  input {
+    height: 25px;
+    margin-right: 10px;
+  }
+
+  .links {
+    margin-right: 20px;
+  }
+
+  #head {
+    cursor: pointer;
+  }
+
+  #someome {
+    pointer-events: none;
+  }
+  #Head,
+  #Chest,
+  #Neck,
+  #Waist,
+  #Hip,
+  #Arms,
+  #Hands,
+  #Wrists,
+  #Legs,
+  #Thigh,
+  #Feet,
+  #Shoulder {
+    pointer-events: all;
+  }
+  .highlight {
+    filter: drop-shadow(0px 0px 5px rgba(253, 253, 253, 0.589));
+    stroke: rgb(255, 255, 255);
+    stroke-width: 2px;
+
+    transition: all 0.3s ease-in-out;
+  }
+  .instruction {
+    margin-left: 0px;
+    grid-area: 2/1;
+    font-size: 1rem;
+    font-weight: bold;
+    border: 1px solid #bc5e5e;
+    border-radius: 10px;
+    padding-left: 0px;
+    padding-right: 50px;
+    width: 500px;
+    height: 100px;
+  }
+  .instruction:hover {
+    border: 1px solid #555555;
+  }
+  .instruction-2 {
+    margin-left: 300px;
+    margin-top: 100px;
+    grid-area: 1/1;
+    font-size: 1.5rem;
+  }
+  .save-button {
+    margin-left: 10px;
+    font-size: 1rem;
+    width: 80px;
+  }
+  .select-body-header {
+    padding-top: 20px;
+    margin-left: 35px;
+  }
+  h1 {
+    font-size: 2.5rem;
+    padding: 0;
+    margin: 0;
+  }
+  .main-image {
+    margin-top: 100px;
+    width: 100%;
+    height: auto;
+  }
+  .lag-color {
+    color: #bc5e5e;
+  }
+  input,
+  select {
+    border: 1px solid #bc5e5e;
+    font-size: 1.5rem;
+    border-radius: 10px;
+  }
+  button {
+    padding: 0px 10px;
+    border: none;
+    border-radius: 10px;
+    height: 40px;
+    font-size: 1.2rem;
+
+    background: linear-gradient(135deg, #c54a4a, #a71d1d);
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    border: 1px solid rgb(148, 131, 131);
+    letter-spacing: 2px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+    transition: all 0.3s ease;
+    outline: none;
+  }
+  button:hover {
+    transform: scale(1.1);
+    background: linear-gradient(135deg, #c73939, #a81111);
+    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.4);
+    letter-spacing: 3px;
+  }
+
+  button:active {
+    transform: scale(0.97);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.5);
+  }
+  .list-data {
+    font-size: 1rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  .summary-parts:hover {
+    cursor: pointer;
+    color: #79bc5e;
+  }
+
+  select:hover,
+  input:hover {
+    border: 1px solid;
+  }
+  .slogan-text {
+    text-align: center;
+    padding: 100px;
+    font-size: 2rem;
+  }
+
+  .end-text {
+    display: flex;
+    justify-content: center;
+  }
+  h4 {
+    text-align: center;
+  }
+  .end-logo {
+    text-align: center;
+  }
+  .name-input {
+    width: 150px;
+  }
+  .name-title {
+    margin-right: 10px;
+  }
+  .value-input {
+    width: 150px;
+    font-size: 1rem;
+    padding-left: 5px;
+    font-weight: bold;
+  }
+
+  .name-container {
+    font-size: 1rem;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    margin-left: 0px;
+    height: 0px;
+    margin-top: 50px;
+    align-items: center;
+    text-align: center;
+  }
+
+  .cls-1 {
+    fill: #d49769;
+  }
+
+  .cls-2 {
+    fill: #c29477;
+  }
+
+  .cls-3 {
+    fill: #fff;
+  }
+  .cls-1:hover {
+    cursor: pointer;
+  }
+
+  .cls-2:hover {
+    cursor: pointer;
+  }
+
+  .cls-3:hover {
+    cursor: pointer;
+  }
+  .edit-name {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .list-items {
+    width: fit-content;
+  }
+
+  .popup {
+    position: fixed;
+    bottom: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #22c55e;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    animation: fadeout 3s forwards;
+  }
+
+  @keyframes fadeout {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  small {
+    margin-left: 20px;
+    font-size: 1.2rem;
+  }
+
+  .card-layout {
+    grid-area: 1/2;
+    width: 750px;
+  }
+  .doll-summary {
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+    padding: 0;
+  }
+
+  .cartlag-doll-size {
+    width: 300px;
+  }
+  .download-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 100px;
+    width: 100%;
+  }
+  .new-category-section {
+    margin-top: 250px;
+    margin-left: 40px;
+  }
+  .new-category-form {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: 200px 200px 160px;
+    grid-template-rows: 1fr 1fr 50px;
+    align-items: center;
+    gap: 0px;
+  }
+  .new-category-button {
+    width: 80px;
+    margin-top: 50px;
+    margin-left: 170px;
+    font-size: 1rem;
+    grid-area: 3/2;
+  }
+
+  h5 {
+    margin: 0;
+    padding: 0;
+  }
+  .new-category-name {
+    grid-area: 1/1;
+    font-size: 1.3rem;
+    font-weight: bold;
+  }
+  .new-category-value {
+    grid-area: 1/2;
+    font-size: 1.3rem;
+    font-weight: bold;
+  }
+  .name-input {
+    grid-area: 2/1;
+    width: 150px;
+    font-size: 1rem;
+    padding-left: 5px;
+    font-weight: bold;
+  }
+  .value-wrapper {
+    grid-area: 2/2;
+    display: flex;
+    align-items: center;
+  }
+  .new-value-input {
+    width: 150px;
+  }
+  .new-category-select {
+    grid-area: 1/3;
+  }
+  .navbar {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    margin-left: 0px;
+  }
+  .logo-text {
+    font-size: 1.5rem;
+  }
+  .logo-slogan {
+    font-size: 1rem;
+  }
+  .selected-input {
+    margin-right: 20px;
+  }
+  h6 {
+    margin: 0;
+    padding: 0;
+    color: #bc5e5e;
+  }
+  select {
+    font-size: 1rem;
+    width: 90px;
+  }
+  .new-name {
+    font-size: 1.6rem;
+  }
+  .hello-name {
+    margin-right: 0px;
+  }
+  /* button:hover {
+    transform: scale(1.2) perspective(1px);
+  }
+  button {
+    transition: all 0.5s ease;
+    transform: scale(1);
+  } */
+  .show-selected {
+    max-width: 1px;
+  }
+  .selection {
+    display: flex;
+    align-items: baseline;
+    justify-content: flex-start;
+  }
+  .modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 90%;
+    height: 100%;
+    background: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+  }
+
+  .modal-content {
+    border-radius: 10px;
+    position: relative;
+    max-width: 500px;
+    width: 90%;
+  }
+
+  .modal-image {
+    max-width: 100%;
+    height: auto;
+  }
+  .color-input {
+    margin-left: 20px;
+    height: 45px;
+    width: 45px;
+  }
+
+  .color-input:hover {
+    transform: scale(1.2) perspective(1px);
+  }
+  .color-input:active {
+    transform: scale(0.97);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.5);
+  }
+  .color-input {
+    transition: all 0.5s ease;
+    transform: scale(1);
+  }
+  .reset-button {
+    margin-left: 20px;
+  }
+  .delete-symbol {
+    margin-left: 20px;
+    font-size: 1rem;
+  }
 }
