--- a/mas-bags/src/App.css
+++ b/mas-bags/src/App.css
@@ -140,6 +140,7 @@ input {
   margin-left: 10px;
   font-size: 1rem;
   width: 80px;
+  background-color: white;
 }
 .select-body-header {
   padding-top: 20px;
@@ -315,7 +316,7 @@ small {
 
 .card-layout {
   grid-area: 1/2;
-  width: 750px;
+  width: 950px;
 }
 .doll-summary {
   display: grid;
@@ -381,8 +382,16 @@ h5 {
   display: flex;
   align-items: center;
 }
+.nav-section {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 .new-value-input {
   width: 150px;
+  font-size: 1rem;
+  padding-left: 5px;
+  font-weight: bold;
 }
 .new-category-select {
   grid-area: 1/3;
@@ -451,14 +460,18 @@ select {
   position: fixed;
   top: 0;
   left: 0;
-  background: green;
+  bottom: 0;
+  background: #bc5e5e;
   width: 100%;
-  height: 10%;
+  height: 90px;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
   z-index: 1000;
+  transform: translateY(100%);
+  transition: transform 0.3s ease-in-out;
+  padding-top: 10px;
 }
 
 .brand-modal-content {
@@ -469,11 +482,24 @@ select {
 }
 .brand-list-modal {
   list-style: none;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  padding-bottom: 40px;
+  font-weight: bold;
+}
+.option-style {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  text-indent: 1px;
+  text-overflow: "";
+}
+.recommend-title {
+  font-size: 1rem;
 }
 
 .modal-image {
   max-width: 100%;
-  height: auto;
 }
 .color-input {
   margin-left: 20px;
@@ -492,12 +518,21 @@ select {
   transition: all 0.5s ease;
   transform: scale(1);
 }
-.reset-button {
-  margin-left: 20px;
-}
+
 .delete-symbol {
   margin-left: 20px;
   font-size: 1rem;
+  background-color: white;
+  padding: 5px;
+  height: 30px;
+  border: 2px solid #c54a4a;
+  border-radius: 10px;
+}
+.delete-symbol:hover {
+  transform: scale(1);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.5);
+  background: linear-gradient(135deg, #c54a4a, #a71d1d);
+  cursor: pointer;
 }
 .import-json {
   width: 270px;
@@ -554,6 +589,15 @@ select {
   cursor: pointer;
   transition: all 0.3s ease;
   outline: none;
+}
+.find-brand:hover {
+  transform: scale(1.1);
+  background: linear-gradient(135deg, #c73939, #a81111);
+  box-shadow: 0 12px 20px rgba(0, 0, 0, 0.4);
+  letter-spacing: 3px;
+}
+.settings-button {
+  margin-right: 650px;
 }
 @media (max-width: 400px) {
   #root {
@@ -753,6 +797,10 @@ select {
     font-size: 1rem;
     padding-left: 5px;
     font-weight: bold;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-indent: 1px;
+    text-overflow: "";
   }
 
   .name-container {
