--- a/mas-bags/src/index.css
+++ b/mas-bags/src/index.css
@@ -1,10 +1,13 @@
+@import "@fontsource/jost/index.css";
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
+  /* background-color: #242424; */
   background-color: #242424;
 
   font-synthesis: none;
@@ -12,6 +15,15 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+body {
+  font-family: "Jost", sans-serif;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 /*
 a {
   font-weight: 500;
