--- a/mas-bags/src/App.css
+++ b/mas-bags/src/App.css
@@ -76,7 +76,8 @@ button:hover {
     height: 100px;
   }
   .logotype {
-    margin-left: 20px;
+    margin-left: 120px;
+    margin-top: 20px;
   }
   .settings-button {
     display: flex;
@@ -85,7 +86,7 @@ button:hover {
     margin-top: 0;
     position: absolute;
     top: 20px;
-    right: 20px;
+    right: 120px;
   }
   .name-container {
     grid-area: 2/1;
@@ -519,16 +520,16 @@ button:hover {
   .new-profile-input {
     width: 80%;
     border-radius: 5px;
-    font-size: 0.9rem;
+    font-size: 1.5rem;
 
     padding: 0;
     margin: 0;
-    height: 30px;
+    height: 60px;
     color: #242424;
     box-shadow: 0 6px 6px hsl(0deg 0% 0% / 0.3);
     background-color: #edf285;
     margin-bottom: 10px;
-    border: 2px solid rgb(255, 255, 255);
+    border: 4px solid rgb(255, 255, 255);
     padding-left: 5px;
   }
   .save-name-button {
@@ -681,8 +682,8 @@ button:hover {
   }
   .new-profile-name {
     padding-top: 5px;
-    font-size: 0.8rem;
-    color: rgb(0, 0, 0);
+    font-size: 1.5rem;
+    color: #252525;
     text-align: center;
   }
   .hello-name {
@@ -708,8 +709,8 @@ button:hover {
   .verification-delete {
     background-color: #ffffff;
     margin: 0;
-    font-size: 0.8rem;
-
+    font-size: 1.3rem;
+    text-align: center;
     padding: 0px;
     padding-left: 5px;
     color: #636262;
@@ -723,16 +724,19 @@ button:hover {
     gap: 15px;
   }
   .yes-delete {
-    height: 44px;
-    width: 60px;
+    font-size: 1rem;
+    height: 60px;
+    width: 100px;
     border: none;
     border-radius: 5px;
     background-color: #93abd3;
     box-shadow: 0 6px 6px hsl(0deg 0% 0% / 0.3);
+    margin-bottom: 20px;
   }
   .no-delete {
-    height: 44px;
-    width: 60px;
+    font-size: 1rem;
+    height: 60px;
+    width: 100px;
     border-radius: 5px;
     border: none;
     background-color: #ec5858;
@@ -762,7 +766,7 @@ button:hover {
       rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     left: 0;
     right: 0;
-    width: 220px;
+    width: 280px;
     height: fit-content;
     padding: 0px;
     margin-top: 30px;
@@ -785,10 +789,10 @@ button:hover {
     top: 50%;
     transform: translateY(-50%);
 
-    height: 500px;
+    height: 300px;
     width: 400px;
     padding: 10px;
-    background-color: #242424;
+    background-color: rgba(36, 36, 36, 0.8);
     display: flex;
     align-items: center;
     text-align: center;
@@ -1132,7 +1136,7 @@ button:hover {
   }
 
   .react-colorful {
-    width: 220px !important;
+    width: 280px !important;
     height: 200px !important;
     border-radius: 5px;
     border: none;
@@ -1230,7 +1234,14 @@ button:hover {
   input {
     font-family: "Jost", sans-serif;
   }
-
+  .project-by-container {
+    margin-top: 20px;
+    margin-bottom: 120px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
   .page-layout {
     overflow: hidden;
     display: grid;
@@ -1692,16 +1703,16 @@ button:hover {
   .new-profile-input {
     width: 80%;
     border-radius: 5px;
-    font-size: 0.9rem;
+    font-size: 1.3rem;
 
     padding: 0;
     margin: 0;
-    height: 30px;
+    height: 50px;
     color: #242424;
     box-shadow: 0 6px 6px hsl(0deg 0% 0% / 0.3);
     background-color: #edf285;
     margin-bottom: 10px;
-    border: 2px solid rgb(255, 255, 255);
+    border: 3px solid rgb(255, 255, 255);
     padding-left: 5px;
   }
   .save-name-button {
@@ -1854,8 +1865,8 @@ button:hover {
   }
   .new-profile-name {
     padding-top: 5px;
-    font-size: 0.8rem;
-    color: rgb(0, 0, 0);
+    font-size: 1.2rem;
+    color: #252525;
     text-align: center;
   }
   .hello-name {
@@ -1881,12 +1892,13 @@ button:hover {
   .verification-delete {
     background-color: #ffffff;
     margin: 0;
-    font-size: 0.8rem;
+    font-size: 1.1rem;
 
     padding: 0px;
     padding-left: 5px;
     color: #636262;
     height: fit-content;
+    text-align: center;
   }
   .verify-buttons {
     display: flex;
@@ -1896,16 +1908,19 @@ button:hover {
     gap: 15px;
   }
   .yes-delete {
-    height: 44px;
-    width: 60px;
+    font-size: 1rem;
+    height: 50px;
+    width: 80px;
     border: none;
     border-radius: 5px;
     background-color: #93abd3;
     box-shadow: 0 6px 6px hsl(0deg 0% 0% / 0.3);
+    margin-bottom: 20px;
   }
   .no-delete {
-    height: 44px;
-    width: 60px;
+    font-size: 1rem;
+    height: 50px;
+    width: 80px;
     border-radius: 5px;
     border: none;
     background-color: #ec5858;
@@ -3002,7 +3017,7 @@ button:hover {
   .new-profile-name {
     padding-top: 5px;
     font-size: 0.8rem;
-    color: rgb(0, 0, 0);
+    color: #252525;
     text-align: center;
   }
   .hello-name {
@@ -3028,7 +3043,7 @@ button:hover {
     background-color: #ffffff;
     margin: 0;
     font-size: 0.8rem;
-
+    text-align: center;
     padding: 0px;
     padding-left: 5px;
     color: #636262;
@@ -3048,6 +3063,7 @@ button:hover {
     border-radius: 5px;
     background-color: #93abd3;
     box-shadow: 0 6px 6px hsl(0deg 0% 0% / 0.3);
+    margin-bottom: 20px;
   }
   .no-delete {
     height: 44px;
