--- a/mas-bags/src/App.css
+++ b/mas-bags/src/App.css
@@ -73,7 +73,7 @@ button:hover {
     padding: 0;
   }
   .logo {
-    height: 100px;
+    height: 90px;
   }
   .logotype {
     margin-left: 120px;
@@ -382,7 +382,8 @@ button:hover {
     min-height: 44px; */
 
     color: #ffffff;
-
+    display: grid;
+    grid-template-columns: 100px 100px;
     font-size: 1rem;
 
     border-radius: 5px;
@@ -443,7 +444,7 @@ button:hover {
   .value-input {
     width: 120px;
     height: 40px;
-    font-size: 1rem;
+    font-size: 1.5rem;
     align-items: center;
     align-self: center;
     padding-bottom: 0px;
@@ -641,16 +642,20 @@ button:hover {
   }
 
   .new-name-input {
-    width: 120px;
-    height: 40px;
-    font-size: 0.8rem;
+    width: 200px;
+    height: 50px;
+    font-size: 1.3rem;
     padding-left: 5px;
     font-weight: bold;
   }
+  .error-text {
+    color: red;
+    font-size: 1rem;
+  }
   .new-value-input {
-    width: 120px;
-    height: 40px;
-    font-size: 0.8rem;
+    width: 200px;
+    height: 50px;
+    font-size: 1.3rem;
     padding-left: 5px;
     font-weight: bold;
   }
@@ -966,6 +971,7 @@ button:hover {
     align-items: start;
     align-self: start;
     line-height: 1;
+    font-weight: bold;
     color: #edf285;
     margin: 0;
     padding: 0;
@@ -1156,7 +1162,7 @@ button:hover {
     position: fixed;
     top: 0;
     left: 0;
-    width: 400px;
+    width: 420px;
 
     background: #242424;
     display: grid;
@@ -1192,6 +1198,9 @@ button:hover {
   .logotype-card {
     padding: 20px;
     height: 90px;
+    grid-area: 1/1;
+    align-self: start;
+    justify-self: start;
   }
   .logo-doll-wrap {
     margin: 0;
@@ -1204,7 +1213,7 @@ button:hover {
 
     position: relative;
     width: fit-content;
-    align-self: start; /* Moves it to the top */
+    align-self: start;
     justify-self: start;
     margin-left: 0;
     padding-left: 0;
@@ -1235,6 +1244,10 @@ button:hover {
   input {
     font-family: "Jost", sans-serif;
   }
+  .error-text {
+    color: red;
+    font-size: 0.8rem;
+  }
   .project-by-container {
     margin-top: 20px;
     margin-bottom: 120px;
@@ -1258,10 +1271,11 @@ button:hover {
     padding: 0;
   }
   .logo {
-    height: 100px;
+    height: 70px;
   }
   .logotype {
-    margin-left: 20px;
+    margin-left: 120px;
+    margin-top: 20px;
   }
   .settings-button {
     display: flex;
@@ -1562,7 +1576,8 @@ button:hover {
     align-items: center;
     margin-bottom: 20px;
     min-height: 44px; */
-
+    display: grid;
+    grid-template-columns: 100px 100px;
     color: #ffffff;
 
     font-size: 1rem;
@@ -1627,7 +1642,7 @@ button:hover {
   .value-input {
     width: 120px;
     height: 40px;
-    font-size: 1rem;
+    font-size: 1.3rem;
     align-items: center;
     align-self: center;
     padding-bottom: 0px;
@@ -1827,14 +1842,14 @@ button:hover {
   .new-name-input {
     width: 120px;
     height: 40px;
-    font-size: 0.8rem;
+    font-size: 1rem;
     padding-left: 5px;
     font-weight: bold;
   }
   .new-value-input {
     width: 120px;
     height: 40px;
-    font-size: 0.8rem;
+    font-size: 1rem;
     padding-left: 5px;
     font-weight: bold;
   }
@@ -2148,6 +2163,7 @@ button:hover {
     align-items: start;
     align-self: start;
     line-height: 1;
+    font-weight: bold;
     color: #edf285;
     margin: 0;
     padding: 0;
@@ -2338,7 +2354,7 @@ button:hover {
     position: fixed;
     top: 0;
     left: 0;
-    width: 400px;
+    width: 420px;
 
     background: #242424;
     display: grid;
@@ -2417,7 +2433,10 @@ button:hover {
   input {
     font-family: "Jost", sans-serif;
   }
-
+  .error-text {
+    color: red;
+    font-size: 0.6rem;
+  }
   .page-layout {
     overflow: hidden;
     display: grid;
@@ -2716,9 +2735,10 @@ button:hover {
     min-height: 44px; */
 
     color: #ffffff;
-
+    display: grid;
+    grid-template-columns: 100px 100px;
     font-size: 1rem;
-    text-align: center;
+
     border-radius: 5px;
     background-color: none;
     padding: 0;
@@ -2764,9 +2784,6 @@ button:hover {
     margin-right: 10px;
   }
   .selection-input-unit {
-    /* display: flex;
-    justify-content: flex-start;
-    align-items: center; */
     width: 100%;
     margin: 0;
     padding: 0;
@@ -2777,7 +2794,7 @@ button:hover {
   }
 
   .value-input {
-    width: 90px;
+    width: 70px;
     height: 30px;
     font-size: 1rem;
     align-items: center;
@@ -2979,14 +2996,14 @@ button:hover {
   .new-name-input {
     width: 100px;
     height: 25px;
-    font-size: 0.8rem;
+    font-size: 0.6rem;
     padding-left: 5px;
     font-weight: bold;
   }
   .new-value-input {
     width: 100px;
     height: 25px;
-    font-size: 0.8rem;
+    font-size: 0.6rem;
     padding-left: 5px;
     font-weight: bold;
   }
@@ -3300,6 +3317,7 @@ button:hover {
     line-height: 1;
     color: #edf285;
     margin: 0;
+    font-weight: bold;
     padding: 0;
   }
   .color-input:hover {
@@ -3504,7 +3522,7 @@ button:hover {
     position: fixed;
     top: 0;
     left: 0;
-    width: 400px;
+    width: 420px;
 
     background: #242424;
     display: grid;
