--- a/src/App.css
+++ b/src/App.css
@@ -234,7 +234,7 @@ h6 {
 }
 
 .cartlag-doll {
-  width: 390px;
+  width: 300px;
 
   position: relative;
   z-index: 1;
@@ -599,9 +599,9 @@ small {
 }
 .new-category-section {
   position: absolute;
-  top: 380px !important;
-  padding-left: 20px;
-  right: 10px !important;
+  top: 260px !important;
+  left: 30px !important;
+  right: 0px !important;
   z-index: 999;
   height: fit-content;
   pointer-events: none;
@@ -715,6 +715,7 @@ select {
   text-align: center;
 }
 .hello-name {
+  margin-top: -35px;
   display: flex;
   font-size: 1.5rem;
 }
@@ -1401,11 +1402,11 @@ h2 {
     padding: 0;
   }
   .logo {
-    height: 100px;
+    height: 80px;
   }
   .logotype {
-    margin-left: 120px;
-    margin-top: 20px;
+    margin-left: 100px;
+    margin-top: 0px;
   }
   .settings-button {
     display: flex;
@@ -1497,7 +1498,7 @@ h2 {
   }
 
   .cartlag-doll {
-    width: 490px;
+    width: 280px;
 
     position: relative;
     z-index: 1;
@@ -1856,9 +1857,10 @@ h2 {
   }
   .new-category-section {
     position: absolute;
-    top: 480px !important;
+    top: 250px !important;
 
     right: 10px !important;
+    left: 350px !important;
     z-index: 999;
     height: fit-content;
     pointer-events: none;
@@ -1967,6 +1969,7 @@ h2 {
     text-align: center;
   }
   .hello-name {
+    margin-top: -50px;
     display: flex;
     font-size: 1.8rem;
   }
@@ -2437,6 +2440,36 @@ h2 {
   }
   .close-color-button:hover {
   }
+  .modal-overlay-summary {
+    position: fixed;
+    top: 0px;
+    left: 500px;
+    width: 100%;
+    max-width: 420px;
+
+    background: linear-gradient(
+      to bottom,
+
+      #8c574e 0%,
+      #5d3f3a 100%
+    );
+    display: grid;
+    grid-template-columns: 55% 45%;
+    grid-template-rows: 100px 80px 290px 100px;
+
+    align-items: start;
+    gap: 0;
+    margin: 0;
+    padding: 0;
+    z-index: 1100;
+    height: 570px;
+    aspect-ratio: 420 / 570;
+
+    border: none;
+    border-radius: 2px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+  }
 }
 
 /* ----------------------------------------------------------------------------------------------------- */
@@ -2489,11 +2522,11 @@ h2 {
     padding: 0;
   }
   .logo {
-    height: 120px;
+    height: 90px;
   }
   .logotype {
     margin-left: 120px;
-    margin-top: 20px;
+    margin-top: 0px;
   }
   .settings-button {
     display: flex;
@@ -2587,7 +2620,7 @@ h2 {
   }
 
   .cartlag-doll {
-    width: 490px;
+    width: 300px;
 
     position: relative;
     z-index: 1;
@@ -2930,10 +2963,11 @@ h2 {
   }
   .new-category-section {
     position: absolute;
-    top: 480px !important;
+    top: 300px !important;
     padding-left: 0;
-    right: 10px !important;
-    z-index: 999;
+    right: 100px !important;
+    left: 500px !important;
+    z-index: 99;
     height: fit-content;
     pointer-events: none;
   }
@@ -3044,8 +3078,9 @@ h2 {
     text-align: center;
   }
   .hello-name {
+    margin-top: -60px;
     display: flex;
-    font-size: 2.5rem;
+    font-size: 2.4rem;
   }
   .hello {
     margin-right: 15px;
@@ -3159,7 +3194,7 @@ h2 {
     top: 50%;
     transform: translateY(-50%);
 
-    height: 300px;
+    height: 250px;
     width: 400px;
     padding: 10px;
 
@@ -3177,6 +3212,36 @@ h2 {
     display: flex;
     justify-content: center;
     margin-bottom: 40px;
+  }
+  .modal-overlay-summary {
+    position: fixed;
+    top: 60px;
+    left: 600px;
+    width: 100%;
+    max-width: 420px;
+
+    background: linear-gradient(
+      to bottom,
+
+      #8c574e 0%,
+      #5d3f3a 100%
+    );
+    display: grid;
+    grid-template-columns: 55% 45%;
+    grid-template-rows: 100px 80px 290px 100px;
+
+    align-items: start;
+    gap: 0;
+    margin: 0;
+    padding: 0;
+    z-index: 1100;
+    height: 570px;
+    aspect-ratio: 420 / 570;
+
+    border: none;
+    border-radius: 2px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
   }
   .list-button {
     overflow: hidden;
