--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@ html {
   margin: 0;
   padding: 0;
 }
+a {
+  text-decoration: none;
+  color: white;
+}
 html,
 body {
   height: auto;
@@ -99,6 +103,10 @@ input {
   font-size: 0.6rem;
 }
 .message-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   margin-top: 100px;
   gap: 100px;
 }
@@ -373,9 +381,10 @@ input {
   margin-right: 5px;
 }
 .select-text-alternative {
-  padding-top: 10px;
+  margin-top: 0px;
   color: #edeae4;
   font-size: 1rem;
+  height: 50px;
 }
 .summary-button {
   margin: 0;
@@ -2111,7 +2120,7 @@ h2 {
   .selection-greeting {
     position: fixed;
     right: 0;
-    left: 70%;
+    left: 65%;
     top: 50%;
     transform: translateY(-50%);
 
@@ -3207,7 +3216,7 @@ h2 {
     top: 50%;
     transform: translateY(-50%);
     left: 70%;
-    height: 180px !important;
+    height: 250px !important;
     width: 400px;
     padding: 10px;
 
