--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,8 @@
   background: linear-gradient(
     to bottom,
 
-    #38302e 0%,
-    #38302e 100%
+    #232121 0%,
+    #232121 100%
   );
 
   font-synthesis: none;
